--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="primary" type="color">#FF5722</item>
-    <item name="primary_dark" type="color">#E64A19</item>
-    <item name="accent" type="color">#FFAB91</item>
-    <item name="primary_pressed" type="color">#FFAB91</item>
+    <item name="primary" type="color">#2196F3</item>
+    <item name="primary_dark" type="color">#1976D2</item>
+    <item name="accent" type="color">#90CAF9</item>
+    <item name="primary_pressed" type="color">#90CAF9</item>
     <item name="ripple" type="color">#cccccc</item>
 
     <color name="white">#fafafa</color>
