--- a/app/src/main/res/layout/activity_new_chores.xml
+++ b/app/src/main/res/layout/activity_new_chores.xml
@@ -13,16 +13,24 @@
         android:layout_height="60dp"
         android:id="@+id/titleLayout">
 
-        <EditText
-            android:inputType="textCapSentences"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:id="@+id/editText"
-            android:hint="Enter the Chores detail"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true" >
+
+            <EditText
+                android:inputType="textCapSentences"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#00000000"
+                android:id="@+id/editText"
+                android:hint="Enter the Chores detail"
+                />
+
+        </android.support.design.widget.TextInputLayout>
+
     </RelativeLayout>
     <FrameLayout
         android:layout_width="match_parent"
